# reshal-api

./: Dockerfile  docker-compose.otlp.yaml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt
reshal_api/: alembic.ini  base.py  config.py  database.py  exceptions.py  lifespan.py  main.py  mixins.py  opentelemetry.py
reshal_api/auth/: dependencies.py  exceptions.py  jwt.py  models.py  router.py  schemas.py  security.py  service.py
reshal_api/email/: dependencies.py  service.py  tasks.py
reshal_api/email/templates/: base.html  reservation_created.html
reshal_api/facility/: dependencies.py  file_manager.py  models.py  router.py  schemas.py  service.py
reshal_api/migrations/: env.py
reshal_api/migrations/versions/: 2023-04-25_add_user.py  2023-04-29_add_user_roles_add_facility.py  2023-04-30_add_facility_image.py  2023-05-01_add_reservation_timeframe_payment.py  2023-05-21_add_lat_lon.py  2023-05-21_store_price_as_decimal.py  2023-06-17_add_facility_type.py  2023-06-20_add_image_url_remove_facilityimage_.py  2023-06-20_add_price.py  2023-06-20_add_price_to_reservation.py  2023-08-27_fix_numeric.py  2023-10-15_add_facility_image.py  2023-11-07_remove_fk.py
reshal_api/payment/: dependencies.py  models.py  router.py  schemas.py  service.py
reshal_api/reservation/: dependencies.py  models.py  router.py  schemas.py  service.py
reshal_api/timeframe/: dependencies.py  models.py  router.py  schemas.py  service.py
tests/: conftest.py  database.py  factories.py  test_home.py  utils.py
tests/auth/: test_endpoints.py  test_schemas.py  test_service.py
tests/facility/: test_endpoints.py  test_schemas.py  test_service.py
tests/reservation/: test_endpoints.py  test_schemas.py  test_service.py
