[tool.poetry]
name = "reshal-api"
version = "0.1.0"
description = ""
authors = ["bartosz121 <bmagiera121@gmail.com>"]
readme = "README.md"
packages = [{ include = "reshal_api" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = { extras = ["standard"], version = "^0.21.1" }
orjson = "^3.8.10"
pyhumps = "^3.8.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.9" }
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["argon2"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^1.10.7"}
alembic = "^1.10.4"
asyncpg = "^0.27.0"

[tool.poetry.scripts]
reshal-api = "reshal_api.main:run"

[tool.ruff]
exclude = ["venv", ".nox"]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry.group.dev.dependencies]
black = { version = "^23.3.0", allow-prereleases = true }
ruff = "^0.0.262"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
