[tool.poetry]
name = "reshal-api"
version = "0.1.0"
description = ""
authors = ["bartosz121 <bmagiera121@gmail.com>"]
readme = "README.md"
packages = [{ include = "reshal_api" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = { extras = ["standard"], version = "^0.21.1" }
orjson = "^3.8.10"
pyhumps = "^3.8.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.11" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["argon2"], version = "^1.7.4" }
pydantic = { extras = ["email"], version = "^1.10.7" }
alembic = "^1.10.4"
asyncpg = "^0.27.0"
aiofiles = "^23.1.0"
python-multipart = "^0.0.6"
pillow = "^9.5.0"
pytz = "^2023.3"
opentelemetry-api = "^1.17.0"
opentelemetry-sdk = "^1.17.0"
opentelemetry-exporter-otlp = "^1.17.0"
opentelemetry-instrumentation-fastapi = "^0.38b0"
opentelemetry-instrumentation-logging = "^0.38b0"
prometheus-client = "^0.16.0"
jinja2 = "^3.1.2"
boto3 = "^1.29.7"

[tool.poetry.scripts]
reshal-api = "reshal_api.main:run"

[tool.ruff]
exclude = ["venv", ".nox"]
line-length = 120
target-version = "py311"
unfixable = ["F401", "F841"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning:google.rpc",
]
env = [
    "APP_ENVIRONMENT=TESTING",
    "APP_SECRET_KEY=pytestsecret",
    "APP_ACCESS_TOKEN_COOKIE_NAME=reshal_access_token_pytest",
    "DB_NAME=reshaldbtest",
]

[tool.poetry.group.dev.dependencies]
black = { version = "^23.3.0", allow-prereleases = true }
ruff = "^0.0.262"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.0"
typer = { extras = ["all"], version = "^0.7.0" }
psycopg2 = "^2.9.6"
pytest-env = "^0.8.2"
sqlalchemy-utils = "^0.41.1"
factory-boy = "^3.2.1"
faker = "^18.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
